--- a/app/views/welcomes/_form.haml
+++ b/app/views/welcomes/_form.haml
@@ -51,11 +51,11 @@
                 = f.button :button, t("welcomes.search"), class: "btn btn-primary secondary-branding-color", disabled: false, tabindex: 7, id: "btn-search", value: "submitted", data: { disable_with: "<small>#{t("loading")}</small>" }
 
 -# modal
-= render( LocationModalComponent.new(component: 'province') ) do |c|
+= render_component( LocationModalComponent.new(component: 'province') ) do |c|
   = c.with(:select_input) do
     %select.province_code.form-control.select{"data-pumi-select-collection-label-method" => @location_filter.name_i18n, "data-pumi-select-collection-url" => "/provinces", "data-pumi-select-collection-value-method" => "id", "data-pumi-select-populate-on-load": "true", name: 'province_code[]', 'data-pumi-select-has-hidden-value' => true, multiple: "multiple"}
       %option{value: ""}= t('dashboard.all_province')
-= render( LocationModalComponent.new(component: 'district') ) do |c|
+= render_component( LocationModalComponent.new(component: 'district') ) do |c|
   = c.with(:select_input) do
     %select.district_code.form-control.select{"data-pumi-select-collection-label-method" => @location_filter.name_i18n, "data-pumi-select-collection-url" => "/districts?province_id=FILTER", "data-pumi-select-collection-url-filter-interpolation-key" => "FILTER", "data-pumi-select-collection-value-method" => "id", "data-pumi-select-disabled-class" => "my-disabled-class", "data-pumi-select-disabled-target" => "#district", "data-pumi-select-id" => "district", name: 'district_code[]', 'data-pumi-select-has-hidden-value' => true, multiple: "multiple"}
       %option{value: ""}= t('dashboard.all_district')
