--- a/app/assets/stylesheets/_reports.scss
+++ b/app/assets/stylesheets/_reports.scss
@@ -11,6 +11,10 @@
     min-height: 0;
   }
 
+  #main-content {
+    height: 100%;
+  }
+
   .loading {
     display: flex;
     flex: 1;
@@ -20,5 +24,11 @@
     width: 100%;
     position: absolute;
     z-index: 1;
+    z-index: 9999;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+
+  .loading > img {
+    width: 120px;
   }
 }
