--- a/app/views/layouts/welcome.html.haml
+++ b/app/views/layouts/welcome.html.haml
@@ -13,6 +13,7 @@
   %body{ id: css_class_name, style: 'overflow-y: scroll' }
     = content_tag :a, nil, id: "link"
     #main-content.position-relative
+      = render "welcomes/loading"
       = render "welcomes/switch_lang"
       #logo-container.mb-5
         .container
