WIP dashboard lazy loading

--- a/app/views/dashboard/_gender.haml
+++ b/app/views/dashboard/_gender.haml
@@ -1,4 +1,4 @@
-- downloadable = @query.users_visited_by_each_genders.present?
+- downloadable = [] #@query.users_visited_by_each_genders.present?
 
 = render_component(ChartComponent.new(name: title, downloadable: downloadable)) do |c|
   - c.with(:config) { open_config_modal("#chooseCriteria") }
