--- a/app/views/dashboard/_choose_dictionary_modal.html.haml
+++ b/app/views/dashboard/_choose_dictionary_modal.html.haml
@@ -11,7 +11,8 @@
           = f.input :filter, label: false, class: "form-control variable-filter", placeholder: t("dashboard.type_search")
 
           #accordionExample.accordion
-            - Variable.includes(:values).all.each do |variable|
+            -# Variable.includes(:values).all
+            - [].each do |variable|
               .card
                 #headingOne.card-header.p-1
                   %h2.mb-0.pl-3
