--- a/app/views/dashboard/_choose_dictionary_modal.html.haml
+++ b/app/views/dashboard/_choose_dictionary_modal.html.haml
@@ -12,7 +12,7 @@
 
           #accordionExample.accordion
             -# Variable.includes(:values).all
-            - [].each do |variable|
+            - @variables.each do |variable|
               .card
                 #headingOne.card-header.p-1
                   %h2.mb-0.pl-3
