Update showcase style

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,7 @@
 @import "sb-admin-sidebar";
 @import "home";
 @import "dashboard";
+@import "dashboard/showcase";
 @import "tickets";
 @import "dictionaries";
 @import "template";
