--- a/app/components/summary_component.html.haml
+++ b/app/components/summary_component.html.haml
@@ -1,8 +1,7 @@
 .col-xl-3.col-lg-6.mb-4
   .card.shadow.h-100.py-2{ class: "border-left-#{@style} #{@css_class_name}"}
     = config
-    .loading{ style: "top: 0;position: absolute;z-index: 100;display: flex;flex: 1;width: 100%;height: 100%;justify-content: center;align-items: center;background-color:rgba(255,255,255,0.85)"}
-      loading...
+    = render "shared/loading"
     .card-body.py-0.d-flex.align-items-center
       .row.no-gutters.align-items-center.flex-grow-1{ style: "z-index: 99;" }
         .col.mr-2
