--- a/app/views/dashboard/_number_of_tracked_ticket.html.haml
+++ b/app/views/dashboard/_number_of_tracked_ticket.html.haml
@@ -1,4 +1,3 @@
-- downloadable = []#@query.number_of_tracking_tickets.present?
-= render_component(ChartComponent.new(name: title, downloadable: downloadable)) do |c|
+= render_component(ChartComponent.new(name: title, downloadable: [])) do |c|
   - c.with(:config) { "&nbsp;" }
   - c.with(:body) { content_tag(:canvas, nil, id: id) }
