--- a/app/views/dashboard/_total_user_feedback_groupby_gender.haml
+++ b/app/views/dashboard/_total_user_feedback_groupby_gender.haml
@@ -1,4 +1,3 @@
-- downloadable = []#@query.total_users_feedback_by_gender.present?
-= render_component(ChartComponent.new(name: title, downloadable: downloadable)) do |c|
+= render_component(ChartComponent.new(name: title, downloadable: [])) do |c|
   - c.with(:body) { content_tag(:canvas, nil, id: id) }
   - c.with(:hint) { t("hint.total_user_feedback_groupby_gender") }
