--- a/app/assets/stylesheets/_welcome.scss
+++ b/app/assets/stylesheets/_welcome.scss
@@ -7,7 +7,7 @@
 #reports-index {
   // Improve keyboard visibility when
   // user navigate using tab
-  
+
   a:focus,
   .form-control:focus,
   .select2-container--focus .select2-selection,
@@ -21,6 +21,10 @@
   .logo-link:focus {
     border-color: #bac8f3;
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+  }
+
+  .nav-tabs .nav-link:hover {
+    border-color: transparent;
   }
 
   .text-intro {
@@ -41,26 +45,26 @@
   }
 
   .shadow {
-    box-shadow: 1px 1px 1px rgba(204, 204,204,50%);
+    box-shadow: 1px 1px 1px rgba(204, 204, 204, 50%);
   }
 
   .branding-logo {
     height: 72px;
   }
-  
+
   #logo-container {
     background: #002f6c;
     border-bottom: 1px solid #ccc;
     box-shadow: 1px 1px 1px #cccccc24;
     padding: 15px;
   }
-  
+
   #form-query {
-    background-color: #FFF;
+    background-color: #fff;
     transition: all 0.1s ease-in;
 
     &.highlight {
-      color: #FFF;
+      color: #fff;
       background-color: #002f6c;
     }
   }
@@ -81,7 +85,7 @@
     padding: 0 !important;
   }
 
-  canvas{
+  canvas {
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
@@ -107,7 +111,7 @@
 
   #q_districts {
     position: relative;
-    background-color: #FFF;
+    background-color: #fff;
   }
 
   .tabs-container {
@@ -172,7 +176,7 @@
     line-height: 1em;
     display: block;
   }
-  
+
   .location-title {
     line-height: 0.5em;
 
@@ -196,7 +200,8 @@
     color: #777;
     padding: 30px 0;
 
-    h6, p {
+    h6,
+    p {
       font-size: 0.8em;
     }
 
@@ -227,7 +232,7 @@
     display: inline-block;
     margin-bottom: 8px;
   }
-  
+
   .chat-with-us {
     position: fixed;
     bottom: 19px;
