--- a/app/assets/stylesheets/dashboard/_showcase.scss
+++ b/app/assets/stylesheets/dashboard/_showcase.scss
@@ -1,4 +1,4 @@
-.summary {
+.showcase {
   .loading {
     top: 0;
     position: absolute;
@@ -10,5 +10,6 @@
     justify-content: center;
     align-items: center;
     background-color: rgba(255, 255, 255, 0.85);
+    border-radius: 4px;
   }
 }
