Move #editor container style

--- a/app/assets/stylesheets/schedules.scss
+++ b/app/assets/stylesheets/schedules.scss
@@ -18,4 +18,10 @@
   .schedule_enabled {
     margin-top: 15px;
   }
+
+  #editor-container {
+    height: 15rem;
+    width: 100%;
+    font-family: "khmeros_battambang";
+  }
 }
