--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
 @import "shared/styles";
-
+@import "embeded_fonts";
 @import "select2/dist/css/select2.min";
 @import "select2-bootstrap-theme/dist/select2-bootstrap.min";
 
