--- a/app/assets/stylesheets/pdf.scss
+++ b/app/assets/stylesheets/pdf.scss
@@ -16,7 +16,7 @@ div.nobreak {
 }
 
 body {
-  font-family: "Nunito", "Hanuman", -apple-system, BlinkMacSystemFont,
+  font-family: "Nunito", "khmeros_battambang", -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
