Dashboard visitor count

--- a/app/views/welcomes/_sidebar.html.haml
+++ b/app/views/welcomes/_sidebar.html.haml
@@ -1,10 +1,4 @@
 .sidebar-left
-  %span.share-icon
-    = t("social_share_button.share_on")
-
-  = social_share_button_tag t("meta_tags.site"), url: root_url, image: image_url("fb-sample-share-photo.png"), "data-type": "photo"
-
-  .visitor-counter
-    %span.badge.badge-pill.badge-info{ data: { toggle: "tooltip" }, title: t("visitor_count") }
-      %i.fa.fa-eye
-      = Ahoy::Visit.count
+  = render "shared/sidebar/social_share"
+  = render "shared/sidebar/visitor_count"
+  
