--- a/app/views/welcomes/_loading.html.haml
+++ b/app/views/welcomes/_loading.html.haml
@@ -1,2 +1,3 @@
-.loading{ style: "display: none" }
-  = image_tag "loading.gif", alt: "Loading data"
+- if embed
+  .loading{ style: "display: none" }
+    = image_tag "loading.gif", alt: "Loading data"
