--- a/app/views/welcomes/index.html.haml
+++ b/app/views/welcomes/index.html.haml
@@ -1,13 +1,1 @@
-= render "welcomes/sidebar"
-= render "welcomes/article"
-= render "welcomes/header"
-= render "welcomes/form"
-= render "welcomes/tabs/tabs"
-= render "welcomes/footer"
-= render "welcomes/popup_modal"
-
-#sub_categories_modals
-  %span.d-none THIS IS A CONTENT OF FEEDBACK SUBCATEGORIES
-
-#feedback_trend_modals
-  %span.d-none THIS IS A CONTENT OF FEEDBACK TREND
+= render "main_content"
