--- a/app/views/welcomes/_main_content.haml
+++ b/app/views/welcomes/_main_content.haml
@@ -5,7 +5,8 @@
 = render "welcomes/article"
 = render "welcomes/header"
 = render "welcomes/form"
-= render "welcomes/location_modal"
+= render "welcomes/province_modal"
+= render "welcomes/district_modal"
 = render "welcomes/tabs/tabs"
 = render "welcomes/footer"
 = render "welcomes/popup_modal"
