--- a/app/views/welcomes/index.js.erb
+++ b/app/views/welcomes/index.js.erb
@@ -4,6 +4,7 @@ window.gon = JSON.parse('<%= j(@gon_data.to_json.html_safe) %>');
   $('<%= ctx[:dom] %>').<%= ctx[:action] %>('<%= j render("#{ctx[:path]}/#{ctx[:template]}") %>');
 <% end %>
 
+
 // whenever form submitted, refresh sibling
 // so when sibling is clicked, it reload(ajax) the result
 $(".nav-link[href!='<%= @active_tab %>']").data("status", "fresh");
@@ -11,16 +12,26 @@ $(".nav-link[href!='<%= @active_tab %>']").data("status", "fresh");
 $("#sub_categories_modals").html("<%= j render(partial: "dashboard/sub_categories_modals", collection: @query.province_codes_without_other, as: :province_id) %>");
 $("#feedback_trend_modals").html("<%= j render(partial: "dashboard/feedback_trend_modals", collection: @query.province_codes_without_other, as: :province_id) %>");
 
+// TODO: UPDATE PUMI LOCALE WHEN LANGUAGE IS CHANGED
+
 OWSO.WelcomesIndex.scrollToForm();
 OWSO.WelcomesIndex.onWindowScroll();
-OWSO.WelcomesIndex.onDistrictModalSave();
-OWSO.WelcomesIndex.onProvinceModalSave();
+// OWSO.WelcomesIndex.onDistrictModalSave();
+// OWSO.WelcomesIndex.onProvinceModalSave();
 OWSO.DashboardShow.renderDatetimepicker();
 OWSO.DashboardShow.runAsPublicDashboard();
 OWSO.DashboardShow.multiSelectDistricts();
 
 var options = JSON.parse('<%= j(@query.options.to_json.html_safe) %>');
-$('.province_code').val(options.province_id);
+console.log('province_code: ', $('.province_code').val(), options.province_id);
+
+// if( $('.province_code').val() != options.province_id ) {
+//   $(".btn-province-save").trigger("click");
+// }
+// $('.province_code').val(options.province_id);
 $(".btn-province-save").trigger("click");
-$('.district_code').val(options.district_id);
-$(".btn-district-save").trigger("click");
+
+setTimeout(function() {
+  $('.district_code').val(options.district_id).trigger("change");
+  $(".btn-district-save").trigger("click");
+}, 1000)
