Fixed embed iframe

--- a/app/views/welcomes/index.js.erb
+++ b/app/views/welcomes/index.js.erb
@@ -1,4 +1,5 @@
 window.gon = JSON.parse('<%= j(@gon_data.to_json.html_safe) %>');
+$(".loading").hide();
 
 <% @context.each do |ctx|%>
   $('<%= ctx[:dom] %>').<%= ctx[:action] %>('<%= j render("#{ctx[:path]}/#{ctx[:template]}") %>');
