--- a/app/views/welcomes/_form.haml
+++ b/app/views/welcomes/_form.haml
@@ -1,5 +1,5 @@
 #form-query.collapse.d-lg-block
-  = simple_form_for :q, remote: true, method: :get, html: { onsubmit: "$('.loading').show();", class: "pt-3", id: "q", role: "search" } do |f|
+  = simple_form_for :q, remote: true, method: :get, html: { class: "pt-3", id: "q", role: "search" } do |f|
     .mb-3
       .container
         .row
