--- a/app/views/layouts/welcome.html.haml
+++ b/app/views/layouts/welcome.html.haml
@@ -8,6 +8,7 @@
     = display_meta_tags SocialMetaTag.to_meta_tags
     = csrf_meta_tags
     = csp_meta_tag
+    = google_site_verification_meta_tag
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   %body{ id: css_class_name, style: 'overflow-y: scroll' }
