--- a/app/views/welcomes/_input_date_range.html.haml
+++ b/app/views/welcomes/_input_date_range.html.haml
@@ -1,5 +1,5 @@
-%input.start_date{ type: "hidden", name: "start_date", value: @start_date }
-%input.end_date{ type: "hidden", name: "end_date", value: @end_date }
+%input.start_date{ type: "hidden", name: "start_date", value: @start_date, id: "startDate" }
+%input.end_date{ type: "hidden", name: "end_date", value: @end_date, id: "endDate" }
 -# %input.datepicker_date{ tabindex: 6, name: "date_range", id: "date_range" }
 -# .input-group-append
   -# .input-group-text
