custom date range follow primary color

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,7 +45,4 @@
 @import "reports";
 @import "developer_guides";
 @import "privacy_policy";
-
-.DateInput__small {
-  width: 110px;
-}
+@import "custom/react-dates";
