--- a/app/assets/stylesheets/_welcome.scss
+++ b/app/assets/stylesheets/_welcome.scss
@@ -2,6 +2,7 @@
 @import "bootstrap/scss/variables";
 @import "bootstrap/scss/mixins/";
 @import "welcomes/footer";
+@import "shared/variables";
 
 #welcomes-index,
 #reports-index {
@@ -53,7 +54,7 @@
   }
 
   #logo-container {
-    background: #002f6c;
+    background: $primary_color;
     border-bottom: 1px solid #ccc;
     box-shadow: 1px 1px 1px #cccccc24;
     padding: 15px;
@@ -65,7 +66,7 @@
 
     &.highlight {
       color: #fff;
-      background-color: #002f6c;
+      background-color: $primary_color;
     }
   }
 
@@ -238,7 +239,7 @@
     bottom: 19px;
     z-index: 999;
     right: 96px;
-    background-color: #002f6c;
+    background-color: $primary_color;
     color: white;
     padding: 5px 15px;
     border-radius: 10px;
